2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Scan mdraid before LVM.

	* include/grub/diskfilter.h (grub_diskfilter_register): Renamed to ..
	(grub_diskfilter_register_front): ... this.
	(grub_diskfilter_register_back): New function.
	All users of grub_diskfilter_register updated.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix an automatic target detection bug.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: New option --efi-directory.

2012-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Overwrite low memory
	boot services if we have no other choice.

2012-04-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in: Rename --override-directory to --directory and
	document it.
	* tests/util/grub-shell.in: Update to --directory.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c: Disable -Wstrict-aliasing.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/minix.c (grub_minix_data): Fix ino type.
	(grub_minix_read_file): Likewise.
	(grub_minix_read_inode): Likewise.
	(grub_minix_find_file): Likewise.
	(grub_minix_dir): Likewise.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Fix partition handling and blocklist
	check.

2012-04-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Remove
	redundant buggy overlap check.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Set pkgdatadir when calling grub-mkrescue
	and grub-mknetdir.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_cmd_linux): Avoid accessing
	kh.loadflags on pre-2.00 kernels.

2012-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Terminate UNDI and PXE before launching the payload to avoid problems
	with DMA.
